--- a/index.html
+++ b/index.html
@@ -79,27 +79,27 @@
             <div class="projects">
             <!-- project 1 -->
                 <article class="project-one">
-                    <img src="./assets/images/run-buddy.png" alt="screenshot of Run Buddy website" />
+                    <img src="./assets/images/life-on-mars.png" alt="screenshot of Life on Mars group project" />
                     <div class="project-info">
-                        <h3><a href="https://katiebbugs.github.io/run-buddy/" target="_blank">Run Buddy</a></h3>
-                        <h4>HTML | CSS</h4>
+                        <h3><a href="https://sandju.github.io/NASA-Gang/" target="_blank">Life on Mars</a></h3>
+                        <h4>HTML | CSS | Javascript w/APIs</h4>
                     </div>
                 </article>
                 <!-- project 2 -->
                 <div class="other-projects">
                     <article class="project">
-                        <img src="./assets/images/horiseon.png" alt="screenshot of Horiseon website" />
+                        <img src="./assets/images/run-buddy.png" alt="screenshot of Run Buddy website" />
                         <div class="project-info">
-                            <h3><a href="https://katiebbugs.github.io/kb-code-refactor/" target="_blank">Horiseon</a></h3>
-                            <h4>Code Refactor</h4>
+                            <h3><a href="https://katiebbugs.github.io/kb-code-refactor/" target="_blank">Run Buddy</a></h3>
+                            <h4>HTML | CSS</h4>
                         </div>
                     </article>
                 <!-- project 3 -->
                     <article class="project">
-                        <img src="./assets/images/work-in-progress.jpeg" alt="work in progress" />
+                        <img src="./assets/images/horiseon.png" alt="screenshot of Horiseon website" />
                         <div class="project-info">
-                            <h3><a href="url" target="_blank">Project 3</a></h3>
-                            <h4>Work in Progress</h4>
+                            <h3><a href="https://katiebbugs.github.io/kb-code-refactor/" target="_blank">Horiseon</a></h3>
+                            <h4>Code Refactor</h4>
                         </div>
                     </article>
                     <!-- project 4 -->
