--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <div class="projects">
             <!-- project 1 -->
                 <article class="project-one">
-                    <img src="./assets/images/life-on-mars.png" alt="screenshot of Life on Mars group project" />
+                    <img src="./assets/images/soundemic.jpeg" alt="screenshot of Soundemic website" />
                     <div class="project-info">
-                        <h3><a href="https://sandju.github.io/NASA-Gang/" target="_blank">Life on Mars</a></h3>
-                        <h4>HTML | CSS | Javascript w/APIs</h4>
+                        <h3><a href="https://soundemic.herokuapp.com/" target="_blank">Life on Mars</a></h3>
+                        <h4>Handlebars | CSS | Javascript | Passport</h4>
                     </div>
                 </article>
                 <!-- project 2 -->
@@ -104,10 +104,10 @@
                     </article>
                     <!-- project 4 -->
                     <article class="project">
-                        <img src="./assets/images/work-in-progress.jpeg" alt="work in progress" />
+                        <img src="./assets/images/life-on-mars.png" alt="screenshot of Life on Mars group project" />
                         <div class="project-info">
-                            <h3><a href="url" target="_blank">Project 4</a></h3>
-                            <h4>Work in Progress</h4>
+                            <h3><a href="https://sandju.github.io/NASA-Gang/" target="_blank">Project 4</a></h3>
+                            <h4>HTML | CSS | Javascript w/APIs</h4>
                         </div>
                     </article>
                     <!-- project 5 -->
