linking soundemic image

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="projects">
             <!-- project 1 -->
                 <article class="project-one">
-                    <img src="./assets/images/soundemic.jpeg" alt="screenshot of Soundemic website" />
+                    <img src="./assets/images/soundemic.png" alt="screenshot of Soundemic website" />
                     <div class="project-info">
                         <h3><a href="https://soundemic.herokuapp.com/" target="_blank">Life on Mars</a></h3>
                         <h4>Handlebars | CSS | Javascript | Passport</h4>
